--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -291,7 +291,18 @@ all the time...
               <a href="/poms/kill_jobs?submission_id={{submission_id}}&act=hold" alt="Hold"><i class="ui pause icon"></i></a>&nbsp;&nbsp;
               <a href="/poms/kill_jobs?submission_id={{submission_id}}&act=release" alt="Release"><i class="ui play icon"></i></a>&nbsp;&nbsp;
               <a href="/poms/kill_jobs?submission_id={{submission_id}}&act=kill" alt="Kill"><i class="ui trash icon"></i></a>
+               <i class="ui forward icon  grey">&nbsp;&nbspb;
                     
+          {%elif recent_submissions[submission_id]|default(9999) == 7000 %}
+               <i class="ui pause icon grey">&nbsp;&nbspb;
+               <i class="ui play icon grey">&nbsp;&nbspb;
+               <i class="ui trash icon grey">&nbsp;&nbspb;
+                    <a href="{{pomspath}}/force_locate_submission?submission_id={{rec.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
+          {%else%}
+               <i class="ui pause icon grey">&nbsp;&nbspb;
+               <i class="ui play icon grey">&nbsp;&nbspb;
+               <i class="ui trash icon grey">&nbsp;&nbspb;
+               <i class="ui forward icon  grey">&nbsp;&nbspb;
           {%endif%}
           {%endif%}
       {%endif%}
