--- a/webservice/templates/campaign_task_files.html
+++ b/webservice/templates/campaign_task_files.html
@@ -20,8 +20,8 @@ POMS
 
 
 {%block subheader%}
-Campaign Stage {{CampaignStageSnapshot.name}} <span class="ui label">{{CampaignStageSnapshot.campaign_stage_id}}</span> <br/>
-in Campaign {{CampaignStageSnapshot.campaign_stage.campaign_obj.name}}<span class="ui label">{{CampaignStageSnapshot.campaign_stage.campaign_id}}</span>
+Campaign Stage {{CampaignStage.name}} <span class="ui label">{{CampaignStage.campaign_stage_id}}</span> <br/>
+in Campaign {{CampaignStage.campaign_obj.name}}<span class="ui label">{{CampaignStage.campaign_id}}</span>
 {%endblock%}
 
 
