where did 'rec.' come from?

--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -297,7 +297,7 @@ all the time...
                <i class="ui pause icon grey"></i>&nbsp;
                <i class="ui play icon grey"></i>&nbsp;
                <i class="ui trash icon grey"></i>&nbsp;
-                    <a href="{{pomspath}}/force_locate_submission?submission_id={{rec.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
+                    <a href="{{pomspath}}/force_locate_submission?submission_id={{submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
           {%else%}
                <i class="ui pause icon grey"></i>&nbsp;
                <i class="ui play icon grey"></i>&nbsp;
