--- a/webservice/templates/file_uploads.html
+++ b/webservice/templates/file_uploads.html
@@ -1,10 +1,10 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS: Uploaded files for user 
+POMS: Uploaded files for user
  {% if current_experimenter is defined %}
      <i class="user icon" style="margin-left: 1em"></i>
-     {{current_experimenter.first_name}} 
+     {{current_experimenter.first_name}}
      {{current_experimenter.last_name}}
  {% endif %}
 
@@ -19,13 +19,13 @@ Uploaded Files
 
 {%block content%}
 
-  These files will be available as <tt>$UPLOADS/filename</tt> to your launch commands.
+  These files are available as <tt>$UPLOADS/filename</tt> to your launch commands.
   <p>
 
   <div class="ui raised segment">
-  <h3> Upload an new file </h3>
+  <h3> Upload a file </h3>
   <form action="{{pomspath}}/upload_file" method="POST" enctype="multipart/form-data">
-  Filename: <input type="file" name="filename" />
+  Filename: <input type="file" name="filenames" multiple />
             <input type="submit" value="Upload" />
             </form>
   </form>
@@ -48,9 +48,9 @@ Uploaded Files
       </tr>
   {% endfor %}
       <tr><td colspan=4></td></tr>
-      <tr><td style="text-align: right;" colspan=2>Total:</td><td>{{total}}</td><td>{{(total* 1000.0/quota)|int/10}}% of {{(quota/1024)|int}}k quota</td></tr>
-      <tr><td colspan=4> 
-           <input type="submit" name="action" value="Delete Checked"> 
+      <tr><td style="text-align: right;" colspan=2>Total:</td><td>{{total}}b</td><td>{{(total* 1000.0/quota)|int/10}}% of {{(quota/1024)|int}}k quota</td></tr>
+      <tr><td colspan=4>
+           <input type="submit" name="action" value="Delete Checked">
       </td></tr>
   </tbody>
   </table>
@@ -59,4 +59,3 @@ Uploaded Files
 
 
 {%endblock%}
-
