keep 'filename' name for poms_client

--- a/webservice/templates/file_uploads.html
+++ b/webservice/templates/file_uploads.html
@@ -25,7 +25,7 @@ Uploaded Files
   <div class="ui raised segment">
   <h3> Upload a file </h3>
   <form action="{{pomspath}}/upload_file" method="POST" enctype="multipart/form-data">
-  Filename: <input type="file" name="filenames" multiple />
+  Filename: <input type="file" name="filename" multiple />
             <input type="submit" value="Upload" />
             </form>
   </form>
