--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -73,6 +73,10 @@ a regular launch
 
 {%set owner=submission.experimenter_creator_obj.username %}
 
+<!-- submission_log_format {{submission_log_format}}  
+View <a href="{{pomspath}}/list_launch_file?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}_{{submission.submission_id}}">launch output </a> <br>
+-->
+
 {%if submission_log_format == 3 %}
 View <a href="{{pomspath}}/list_launch_file?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}_{{submission.submission_id}}">launch output </a> <br>
 {%elif submission_log_format == 2%}
