--- a/webservice/templates/kill_jobs_confirm.html
+++ b/webservice/templates/kill_jobs_confirm.html
@@ -29,11 +29,11 @@ Confirm {{act}} request {%include 'help_button.html'%}
     ? <br>
   <a href=
      {% if campaign_id %}
-     "{{pomspath}}/kill_jobs?confirm=y&campaign_id={{campaign_id}}&act={{act}}"
+     "{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?confirm=y&campaign_id={{campaign_id}}&act={{act}}"
      {% elif campaign_stage_id %}
-     "{{pomspath}}/kill_jobs?confirm=y&campaign_stage_id={{campaign_stage_id}}&act={{act}}"
+     "{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?confirm=y&campaign_stage_id={{campaign_stage_id}}&act={{act}}"
      {% elif submission_id %}
-       "{{pomspath}}/kill_jobs?confirm=y&submission_id={{submission_id}}&act={{act}}"
+       "{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?confirm=y&submission_id={{submission_id}}&act={{act}}"
      {% endif %}
    >
       <button class="ui button">
