--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -66,12 +66,12 @@ all the time...
               </div>
 
               <div class=item>
-              <a href="{{pomspath}}/campaign_stage_submissions?campaign_name={{CampaignStage.campaign_obj.name}}&stage_name={{CampaignStage.name}}&campaign_stage_id={{CampaignStage.campaign_stage_id}}&tdays=7&tmax={{last_activity}}">
+              <a href="{{pomspath}}/campaign_stage_submissions/{{experiment}}/{{role}}?campaign_name={{CampaignStage.campaign_obj.name}}&stage_name={{CampaignStage.name}}&campaign_stage_id={{CampaignStage.campaign_stage_id}}&tdays=7&tmax={{last_activity}}">
                 <i class="external submissions icon" data-content="Campaign Stage Submissins (1wk)" data-variation="basic"></i>Campaign Stage Submissions (1wk)
               </a>
               </div>
               <div class=item>
-                <a href="{{pomspath}}/campaign_task_files?campaign_stage_id={{CampaignStage.campaign_stage_id}}&tmax={{last_activity}}&tdays=7"><i class="external file icon" data-content="List file statistics for Submissions for CampaignStage" data-variation="basic"></i>Campaign Stage Submission Files</a>
+                <a href="{{pomspath}}/campaign_task_files/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&tmax={{last_activity}}&tdays=7"><i class="external file icon" data-content="List file statistics for Submissions for CampaignStage" data-variation="basic"></i>Campaign Stage Submission Files</a>
               </div>
           </div> <!-- class=menu -->
     </div>
@@ -79,8 +79,8 @@ all the time...
          <h3>Actions</h3>
          <div class=menu>
               <div class=item>
-                <a href="{{pomspath}}/campaign_stage_edit?jump_to_campaign={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
-                         and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}>
+                <a href="{{pomspath}}/campaign_stage_edit/{{experiment}}/{{role}}?jump_to_campaign={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
+                         and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}>
                 <i class="external edit icon" data-content="Edit CampaignStage" data-variation="basic"></i>Edit Campaign Stage</a>
                </div>
 
@@ -93,39 +93,39 @@ all the time...
                      }
                  }
                 </script>
-                <button onclick="confirm_call('Are you sure you want to submit jobs?','{{pomspath}}/launch_jobs?campaign_stage_id={{CampaignStage.campaign_stage_id}}')" {{"disabled" if (session_role=="analysis"
-                   and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                <button onclick="confirm_call('Are you sure you want to submit jobs?','{{pomspath}}/launch_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}')" {{"disabled" if (session_role=="analysis"
+                   and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                    <i class="external rocket icon" data-content="Immediately Launch Submissions for CampaignStage" data-variation="basic">
                    </i>
                   Launch Campaign Stage Jobs Now
                 </button>
                 &nbsp; &nbsp;
-                <a href="{{pomspath}}/launch_jobs?campaign_stage_id={{CampaignStage.campaign_stage_id}}&output_commands=True" {{"disabled" if (session_role=="analysis"
-                   and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                <a href="{{pomspath}}/launch_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&output_commands=True" {{"disabled" if (session_role=="analysis"
+                   and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                 (<i class="external text icon"></i>commands)
                </a>
               </div>
               <div class=item>
-                <button onclick="confirm_call('Are you sure you want to launch test jobs now?','{{pomspath}}/launch_jobs?test_launch=1&campaign_stage_id={{CampaignStage.campaign_stage_id}}')" {{"disabled" if (session_role=="analysis"
-                   and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                <button onclick="confirm_call('Are you sure you want to launch test jobs now?','{{pomspath}}/launch_jobs/{{experiment}}/{{role}}?test_launch=1&campaign_stage_id={{CampaignStage.campaign_stage_id}}')" {{"disabled" if (session_role=="analysis"
+                   and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                    <i class="external rocket icon" data-content="Immediately Launch Test Submissions for CampaignStage" data-variation="basic">
                    </i>
                   Launch Campaign Stage Test Jobs Now
                 </button>
                 &nbsp; &nbsp;
-                <a href="{{pomspath}}/launch_jobs?test_launch=1&campaign_stage_id={{CampaignStage.campaign_stage_id}}&output_commands=True" {{"disabled" if (session_role=="analysis"
-                   and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                <a href="{{pomspath}}/launch_jobs/{{experiment}}/{{role}}?test_launch=1&campaign_stage_id={{CampaignStage.campaign_stage_id}}&output_commands=True" {{"disabled" if (session_role=="analysis"
+                   and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                 (<i class="external text icon"></i>commands)
                </a>
               </div>
 
               <div class=item>
-                <a href="{{pomspath}}/kill_jobs?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=kill" {{"disabled" if (session_role=="analysis"
-                         and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=kill" {{"disabled" if (session_role=="analysis"
+                         and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                    <i class="external trash icon" data-content="Kill running/idle jobs in CampaignStage" data-variation="basic">
                    </i>Kill running/idle Jobs for Campaign Stage
@@ -133,8 +133,8 @@ all the time...
               </div>
 
               <div class=item>
-                <a href="{{pomspath}}/kill_jobs?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=hold" {{"disabled" if (session_role=="analysis"
-                         and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=hold" {{"disabled" if (session_role=="analysis"
+                         and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                    <i class="external pause icon" data-content="Hold running/idle jobs in CampaignStage" data-variation="basic">
                    </i>Hold running/idle Jobs for Campaign Stage
@@ -142,8 +142,8 @@ all the time...
               </div>
 
               <div class=item>
-                 <a href="{{pomspath}}/kill_jobs?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=release" {{"disabled" if (session_role=="analysis"
-                         and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                 <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=release" {{"disabled" if (session_role=="analysis"
+                         and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                  >
                     <i class="external play icon" data-content="Release held jobs in CampaignStage" data-variation="basic">
                     </i>Release held  Jobs for Campaign Stage
@@ -151,8 +151,8 @@ all the time...
               </div>
 
               <div class=item>
-                 <a href="{{pomspath}}/schedule_launch?campaign_stage_id={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
-                         and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                 <a href="{{pomspath}}/schedule_launch/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
+                         and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                  >
                     <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic">
                     </i>Schedule Future Job Launches
@@ -160,7 +160,7 @@ all the time...
              </div>
             {% if CampaignStage.hold_experimenter_id %}
             <div class=item>
-                 <a href="{{pomspath}}/mark_campaign_hold?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Release" 
+                 <a href="{{pomspath}}/mark_campaign_hold/{{experiment}}/{{role}}?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Release" 
                  >
                     <i class="sign out alternate icon" data-content="Release Queued Launches" data-variation="basic">
                     </i>Release queued launches
@@ -169,7 +169,7 @@ all the time...
              </div>
              {% else %}
              <div class=item>
-                 <a href="{{pomspath}}/mark_campaign_hold?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Hold" 
+                 <a href="{{pomspath}}/mark_campaign_hold/{{experiment}}/{{role}}?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Hold" 
                  >
                     <i class="sign in alternate icon" data-content="Queue Future Launches" data-variation="basic">
                     </i>Queue future job launches
@@ -179,15 +179,15 @@ all the time...
             <!--
              <div class=item>
               {# if CampaignStage.active %}
-                 <a href="{{pomspath}}/mark_campaign_active?campaign_stage_id={{CampaignStage.campaign_stage_id}}&is_active=False" {{"disabled" if (session_role=="analysis"
-                         and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                 <a href="{{pomspath}}/mark_campaign_active/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&is_active=False" {{"disabled" if (session_role=="analysis"
+                         and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                  >
                     <i class="external hide icon" data-content="Mark CampaignStage Inactive" data-variation="basic">
                    </i>Mark Campaign Stage Inactive
                  </a>
               {% else %}
-                  <a href="{{pomspath}}/mark_campaign_active?campaign_stage_id={{CampaignStage.campaign_stage_id}}&is_active=True" {{"disabled" if (session_role=="analysis"
-                         and CampaignStage.creator!=current_experimenter.experimenter_id) or CampaignStage.experimenter_holder_obj}}
+                  <a href="{{pomspath}}/mark_campaign_active/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&is_active=True" {{"disabled" if (session_role=="analysis"
+                         and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                   >
                     <i class="external unhide icon" data-content="Mark Campaign Stage Active" data-variation="basic">
                     </i>Mark Campaign Stage Active
@@ -229,7 +229,7 @@ all the time...
     {# currently unused
     <b>Split Dimensions</b>: {{CampaignStage.cs_split_dimensions}}<br/>
     #}
-    <b>Last Split</b>: {{CampaignStage.cs_last_split}} <a href="{{pomspath}}/reset_campaign_split?campaign_stage_id={{CampaignStage.campaign_stage_id}}"><button class="mini ui button"><i class="fast backward icon"></i>Reset</button></a><br/>
+    <b>Last Split</b>: {{CampaignStage.cs_last_split}} <a href="{{pomspath}}/reset_campaign_split/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}"><button class="mini ui button"><i class="fast backward icon"></i>Reset</button></a><br/>
     <!-- <b>Active</b>: {{CampaignStage.active}} <br/> -->
     <b>Created</b>: {{CampaignStage.created}}<br/>
     <b>Creator</b>: {{Campaign_info.Experimenter.username}}<br/>
@@ -284,7 +284,7 @@ all the time...
       {%if f|length > 22 %}
           {%set submission_id = f.split('_')[3]|default('0')|int %}
           {%if submission_id != 0 %}
-          <a href="{{pomspath}}/submission_details?submission_id={{submission_id}}"><span class="ui label green">info</span></a>
+          <a href="{{pomspath}}/submission_details/{{experiment}}/{{role}}?submission_id={{submission_id}}"><span class="ui label green">info</span></a>
           {%if recent_submissions[submission_id]|default(9999) < 7000 and recent_submissions[submission_id]|default(9999) != 2000 %}
 
     
@@ -297,7 +297,7 @@ all the time...
                <i class="ui pause icon grey"></i>&nbsp;
                <i class="ui play icon grey"></i>&nbsp;
                <i class="ui trash icon grey"></i>&nbsp;
-                    <a href="{{pomspath}}/force_locate_submission?submission_id={{submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
+                    <a href="{{pomspath}}/force_locate_submission/{{experiment}}/{{role}}?submission_id={{submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
           {%else%}
                <i class="ui pause icon grey"></i>&nbsp;
                <i class="ui play icon grey"></i>&nbsp;
