--- a/webservice/templates/campaign_stage_submissions.html
+++ b/webservice/templates/campaign_stage_submissions.html
@@ -51,7 +51,7 @@ Campaign Stage:&nbsp;&nbsp; {{data.stage_name}}
             <td>
                 {% if rec.jobsub_job_id is not none %}
                 <!--a href="https://fifemon.fnal.gov/monitor/d/000000188/dag-cluster-summary?var-cluster={{rec.jobsub_cluster}}&var-schedd={{rec.jobsub_schedd}}&from={{data.tminsec}}000&to=now&refresh=3m&orgId=1" target='_blank'-->
-                <a href="{{pomspath}}/submission_details?submission_id={{rec.submission_id}}" target='_blank'>
+                <a href="{{pomspath}}/submission_details/{{experiment}}/{{role}}?submission_id={{rec.submission_id}}" target='_blank'>
                     {{rec.jobsub_job_id}}
                 </a>
                 {% endif %}
@@ -59,15 +59,15 @@ Campaign Stage:&nbsp;&nbsp; {{data.stage_name}}
             <td>
                 {% if rec.jobsub_job_id is not none %}
                     {% if rec.status in ('New', 'Idle', 'Running', 'Held') %}
-                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.submission_id}}&act=hold" alt="Hold"><i class="ui pause icon"></i></a>&nbsp;
-                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.submission_id}}&act=release" alt="Release"><i class="ui play icon"></i></a>&nbsp;
-                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.submission_id}}&act=kill" alt="Kill"><i class="ui trash icon"></i></a>
+                    <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?submission_id={{rec.submission_id}}&act=hold" alt="Hold"><i class="ui pause icon"></i></a>&nbsp;
+                    <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?submission_id={{rec.submission_id}}&act=release" alt="Release"><i class="ui play icon"></i></a>&nbsp;
+                    <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?submission_id={{rec.submission_id}}&act=kill" alt="Kill"><i class="ui trash icon"></i></a>
                        <i class="ui forward icon  grey"></i>&nbsp;
                     {% elif rec.status == 'Completed' %}
                        <i class="ui pause icon grey"></i>&nbsp; 
                        <i class="ui play icon grey"></i>&nbsp;
                        <i class="ui trash icon grey"></i>&nbsp;
-                    <a href="{{pomspath}}/force_locate_submission?submission_id={{rec.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
+                    <a href="{{pomspath}}/force_locate_submission/{{experiment}}/{{role}}?submission_id={{rec.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
                     {% else %}
                      <span>
                        <i class="ui pause icon grey"></i>&nbsp;
