--- a/webservice/templates/file_uploads.html
+++ b/webservice/templates/file_uploads.html
@@ -2,10 +2,10 @@
 
 {%block title%}
 POMS: Uploaded files for user
- {% if current_experimenter is defined %}
+ {% if first_name is defined %}
      <i class="user icon" style="margin-left: 1em"></i>
-     {{current_experimenter.first_name}}
-     {{current_experimenter.last_name}}
+     {{first_name}}
+     {{last_name}}
  {% endif %}
 
 {%endblock%}
@@ -24,7 +24,7 @@ Uploaded Files
 
   <div class="ui raised segment">
   <h3> Upload a file </h3>
-  <form action="{{pomspath}}/upload_file" method="POST" enctype="multipart/form-data">
+  <form action="{{pomspath}}/upload_file/{{experiment}}/{{role}}/{{experimenter}}" method="POST" enctype="multipart/form-data">
   Filename: <input type="file" name="filename" multiple />
             <input type="submit" value="Upload" />
             </form>
@@ -33,7 +33,7 @@ Uploaded Files
 
   <div class="ui raised segment">
   <h3> Uploaded files </h3>
-  <form action="{{pomspath}}/remove_uploaded_files">
+  <form action="{{pomspath}}/remove_uploaded_files/{{experiment}}/{{role}}/{{experimenter}}">
   <table class="ui celled table raised">
   <thead>
   <tr><th><input name="file_all" id="file_all" type="checkbox"><th>Name</th><th>Size</th><th>Uploaded</th></tr>
