--- a/webservice/templates/job_type_edit.html
+++ b/webservice/templates/job_type_edit.html
@@ -29,7 +29,7 @@ JobTypes {%include 'help_button.html'%}
 	{# {% include 'help_button.html' %} task #21477 #}
 {% endmacro %}
 
-<form id="campaign_definition_form" class="ui form" action="job_type_edit" method="POST">
+<form id="campaign_definition_form" class="ui form" action="job_type_edit/{{experiment}}/{{role}}" method="POST">
 
   {% set data = data|default({}) %}
   {%include "view_picker.html" %}
@@ -135,7 +135,7 @@ JobTypes {%include 'help_button.html'%}
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
-    <form id="definition_add_edit_form" class="ui form" method="POST" action="job_type_edit">
+    <form id="definition_add_edit_form" class="ui form" method="POST" action="job_type_edit/{{experiment}}/{{role}}">
       <div class="two fields">
 		<div class="field">
 			<label>Name</label>
@@ -184,7 +184,7 @@ JobTypes {%include 'help_button.html'%}
       </div>
       <input type="hidden" name="experiment" value="{{ data.curr_experiment if data.curr_experiment is defined}}">
       <input type="hidden" name="action" id="ae_definition_action" value="add">
-      <input type="hidden" id="ae_experimenter_id" name="experimenter_id" value="{{current_experimenter.experimenter_id|default('unknown')}}">
+      <input type="hidden" id="ae_experimenter_id" name="experimenter_id" value="{{experimenter_id|default('unknown')}}">
       <input type="hidden" id="ae_campaign_definition_id" name="ae_campaign_definition_id" value="0">
       <input type="hidden" id="ae_definition_parameters" name="ae_definition_parameters" value="[]">
       <input type="hidden" id="ae_definition_recovery" name="ae_definition_recovery" value="[]">
