--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -95,32 +95,32 @@ Campaigns {%include 'help_button.html'%}
                 <!-- id is hidden by css look for #campaign_table above -->
                 <td id="c_id_{{loop.index}}">{{s.campaign_id}}</td>
                 <td align="center"><input type="checkbox" id="c_cbox_{{loop.index}}"></td>
-                <td><a class="stagelink" href="{{pomspath}}/show_campaign_stages?campaign_name={{s.name|urlencode}}">{{s.name}}</a> </td>
+                <td><a class="stagelink" href="{{pomspath}}/show_campaign_stages/{{experiment}}/{{role}}?campaign_name={{s.name|urlencode}}">{{s.name}}</a> </td>
                 <td style="text-align:right">{{s.campaign_id}}</td>
                 <td align="center">{{ 'Yes' if s.active else 'No' }}</td>
 		        <!-- <td> <button onclick="call_show_campaign_stages( '{{s.name}}' )"> {{s.name}} </td> -->
                 <td id="running_{{s.campaign_id}}" style="text-align:right; padding-right: 1em">...</td>
                 <td>
-                    <a href="{{pomspath}}/campaign_stage_submissions?campaign_name={{s.name}}&stage_name=*&campaign_id={{s.campaign_id}}&tdays=7&tmax={{last_activity}}">
+                    <a href="{{pomspath}}/campaign_stage_submissions/{{experiment}}/{{role}}?campaign_name={{s.name}}&stage_name=*&campaign_id={{s.campaign_id}}&tdays=7&tmax={{last_activity}}">
                         <button type="button">
                         <i class="chart line icon"></i>
                         </button>
                     </a>
                 </td>
                 <td>
-                    <button onclick="confirm_call('Are you sure you want to launch jobs now?','{{pomspath}}/launch_campaign?campaign_id={{s.campaign_id}}')">
+                    <button onclick="confirm_call('Are you sure you want to launch jobs now?','{{pomspath}}/launch_campaign/{{experiment}}/{{role}}?campaign_id={{s.campaign_id}}')">
                         <i class="chart rocket icon"></i>
                     </button>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/campaign_deps?tag={{s.name|urlencode}}">
+                    <a href="{{pomspath}}/campaign_deps/{{experiment}}/{{role}}?tag={{s.name|urlencode}}">
                         <button type="button">
                             <i class="sitemap icon"></i>
                         </button>
                     </a>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/gui_wf_edit?campaign={{s.name|urlencode}}">
+                    <a href="{{pomspath}}/gui_wf_edit/{{experiment}}/{{role}}?campaign={{s.name|urlencode}}">
                         <button {{ 'class="ui disabled button"' if (data.authorized[loop.index] == false) }}>
                             <i class="edit icon"></i>
                         </button>
@@ -132,7 +132,7 @@ Campaigns {%include 'help_button.html'%}
                     </button>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/campaign_deps_ini?tag={{s.name|urlencode}}">
+                    <a href="{{pomspath}}/campaign_deps_ini/{{experiment}}/{{role}}?tag={{s.name|urlencode}}">
                         <button type="button">
                             <i class="list icon"></i>
                         </button>
@@ -203,7 +203,7 @@ Campaigns {%include 'help_button.html'%}
   </h3>
   <div class="ui hidden divider"></div>
   <div class="ui text container">
-    <form id="template_clone_form" class="ui form" method="GET" action="{{pomspath}}/gui_wf_edit?">
+    <form id="template_clone_form" class="ui form" method="GET" action="{{pomspath}}/gui_wf_edit/{{experiment}}/{{role}}?">
       <div class="two fields">
         <div class="field">
           <label>Existing Campaign Name</label>
@@ -238,7 +238,7 @@ Campaigns {%include 'help_button.html'%}
                 Deletions will <b>not</b> occur if the campaign has been submitted.
             </p>
         </div>
-        <!-- <form id="delete_campaign_form" class="ui form" method="POST" action="{{pomspath}}/show_campaigns"> -->
+        <!-- <form id="delete_campaign_form" class="ui form" method="POST" action="{{pomspath}}/show_campaigns/{{experiment}}/{{role}}"> -->
         <form id="delete_campaign_form" class="ui form" method="POST" action="" onsubmit="this.action=location.href">
             <div class="one field">
                 <div class="field">
@@ -281,7 +281,7 @@ Campaigns {%include 'help_button.html'%}
                     <div id="tag_container">
                         {% for tag in tags %}
                             <i class="trash outline icon link poms_tag" id="{{Campaign.campaign_id}}_{{tag.tag_id}}"></i>
-                            <a href="{{pomspath}}/search_tags?q={{tag.tag_name|urlencode}}" class="ui blue tag label" id="{{Campaign.campaign_id}}_{{tag.tag_id}}_">{{tag.tag_name}}</a>
+                            <a href="{{pomspath}}/search_tags/{{experiment}}/{{role}}?q={{tag.tag_name|urlencode}}" class="ui blue tag label" id="{{Campaign.campaign_id}}_{{tag.tag_id}}_">{{tag.tag_name}}</a>
                         {% endfor %}
                     </div>
                 </div>
@@ -368,7 +368,7 @@ $('#campaign_table')
 
 function get_running() {
   $.ajax({
-      url: "{{pomspath}}/running_submissions?campaign_id_list={%for c in tl %}{{c.campaign_id}},{%endfor%}-1",
+      url: "{{pomspath}}/running_submissions/{{experiment}}/{{role}}?campaign_id_list={%for c in tl %}{{c.campaign_id}},{%endfor%}-1",
       type: 'GET',
       dataType: 'json',
       success: update_running,
@@ -452,7 +452,7 @@ function pop_add_campaign_modal() {
       onApprove : function() {
         var formdata = {'campaign_name': $("#add_campaign_name").val()};
         $.ajax({
-            url: "{{pomspath}}/campaign_add_name",
+            url: "{{pomspath}}/campaign_add_name/{{experiment}}/{{role}}",
             type: 'GET',
             data: formdata,
             success: function(data){
@@ -481,7 +481,7 @@ function rename_campaign(name, campaign_id) {
                                 'new_campaign_name': $('#new_campaign_name').val()
                                };
                 $.ajax({
-                    url: "{{pomspath}}/campaign_rename_name",
+                    url: "{{pomspath}}/campaign_rename_name/{{experiment}}/{{role}}",
                     type: 'GET',
                     data: formdata,
                     success: function(data){
@@ -525,7 +525,7 @@ function pop_tag_untag_modal() {
             for (const tag of data.result) {
                 const [tag_id, tag_name] = tag;
                 const cids = csv.join('c');
-                const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${encodeURIComponent(tag_name)}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a>`;
+                const new_tag = `<span><a href="{{pomspath}}/search_tags/{{experiment}}/{{role}}?q=${encodeURIComponent(tag_name)}" class="ui blue tag label" id="${cids}_${tag_id}_">${tag_name}</a>`;
                 const new_trash_can = `<i class="trash outline bordered inverted blue icon link poms_tag" id="${cids}_${tag_id}" style="border-radius: 5px;"></i></span>`;
                 $('#tag_container').append(new_tag + new_trash_can);
                 add_click_handler();
@@ -594,7 +594,7 @@ $('#add_button').on('click', function (e) {
             const campaigns_tags_composite_key = data.campaign_id.toString().replace(/,/g, 'c') + "_" + data.tag_id.toString();
             $('#response').html(data.msg);
 
-            const new_tag = `<span><a href="{{pomspath}}/search_tags?q=${encodeURIComponent(data.tag_name)}" class="ui blue tag label" id="${campaigns_tags_composite_key}_">${data.tag_name}</a>`;
+            const new_tag = `<span><a href="{{pomspath}}/search_tags/{{experiment}}/{{role}}?q=${encodeURIComponent(data.tag_name)}" class="ui blue tag label" id="${campaigns_tags_composite_key}_">${data.tag_name}</a>`;
             const new_trash_can = `<i class="trash outline bordered inverted blue icon link poms_tag" id="${campaigns_tags_composite_key}" style="border-radius: 5px;"></i></span>`;
             $('#tag_container').append(new_tag + new_trash_can);
             //$('#tag_container').append(new_tag);
@@ -641,7 +641,7 @@ $('#tag_field').keypress(function (event) {
                         'cl': $("#campaign_ids").val()
                        };
         $.ajax({
-            url: "{{pomspath}}/mark_campaign_active",
+            url: "{{pomspath}}/mark_campaign_active/{{experiment}}/{{role}}",
             type: 'GET',
             data: formdata,
             success: function(data){
