--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -28,9 +28,9 @@ Submission Details {%include 'help_button.html'%}
 <h3>
 Submission #{{submission.submission_id}}<br>
 jobsub_job_Id: {{submission.jobsub_job_id}} <br>
-Campaign Stage <a href="{{pomspath}}/campaign_stage_info?campaign_stage_id={{submission.campaign_stage_snapshot_obj.campaign_stage_id}}">{{submission.campaign_stage_snapshot_obj.name}}</a> 
+Campaign Stage <a href="{{pomspath}}/campaign_stage_info/{{experiment}}/{{role}}?campaign_stage_id={{submission.campaign_stage_snapshot_obj.campaign_stage_id}}">{{submission.campaign_stage_snapshot_obj.name}}</a> 
 <span class="ui label">{{submission.campaign_stage_snapshot_obj.campaign_stage_id}}</span> <br/>
-in Campaign <a href="{{pomspath}}/show_campaigns?just_one={{submission.campaign_stage_obj.campaign_obj.name}}">{{submission.campaign_stage_obj.campaign_obj.name}}</a>
+in Campaign <a href="{{pomspath}}/show_campaigns/{{experiment}}/{{role}}?just_one={{submission.campaign_stage_obj.campaign_obj.name}}">{{submission.campaign_stage_obj.campaign_obj.name}}</a>
 <span class="ui label">{{submission.campaign_stage_obj.campaign_obj.campaign_id}}</span>
 
 </h3>
@@ -74,15 +74,15 @@ a regular launch
 {%set owner=submission.experimenter_creator_obj.username %}
 
 <!-- submission_log_format {{submission_log_format}}  
-View <a href="{{pomspath}}/list_launch_file?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}_{{submission.submission_id}}">launch output </a> <br>
+View <a href="{{pomspath}}/list_launch_file?/{{experiment}}/{{role}}campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}_{{submission.submission_id}}">launch output </a> <br>
 -->
 
 {%if submission_log_format == 3 %}
-View <a href="{{pomspath}}/list_launch_file?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}_{{submission.submission_id}}">launch output </a> <br>
+View <a href="{{pomspath}}/list_launch_file/{{experiment}}/{{role}}?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}_{{submission.submission_id}}">launch output </a> <br>
 {%elif submission_log_format == 2%}
-View <a href="{{pomspath}}/list_launch_file?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}">launch output </a> <br>
+View <a href="{{pomspath}}/list_launch_file/{{experiment}}/{{role}}?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}_{{owner}}">launch output </a> <br>
 {%elif submission_log_format == 1%}
-View <a href="{{pomspath}}/list_launch_file?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}">launch output </a> <br>
+View <a href="{{pomspath}}/list_launch_file/{{experiment}}/{{role}}?campaign_stage_id={{submission.campaign_stage_id}}&fname={{ds}}">launch output </a> <br>
 {%endif%}
 
 View in 
@@ -110,16 +110,16 @@ View the <a href="https://{{schedd}}:8443/jobsub/acctgroups/{{experiment|replace
 <h3>Actions</h3>
 
 {%if history[-1].status_id < 7000 and history[-1].status_id != 2000 %}
-Hold Condor Jobs <a href="{{pomspath}}/kill_jobs?submission_id={{submission.submission_id}}&act=hold"><i class="pause icon"></i></a> <br>
-Release Condor Jobs <a href="{{pomspath}}/kill_jobs?submission_id={{submission.submission_id}}&act=release"><i class="play icon"></i></a> <br>
-Kill Condor Jobs <a href="{{pomspath}}/kill_jobs?submission_id={{submission.submission_id}}&act=kill"><i class="trash icon"></i></a> <br>
+Hold Condor Jobs <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?submission_id={{submission.submission_id}}&act=hold"><i class="pause icon"></i></a> <br>
+Release Condor Jobs <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?submission_id={{submission.submission_id}}&act=release"><i class="play icon"></i></a> <br>
+Kill Condor Jobs <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?submission_id={{submission.submission_id}}&act=kill"><i class="trash icon"></i></a> <br>
 Kick to Located  <i class="ui forward icon  grey"></i>&nbsp;
 {%elif history[-1].status_id == 7000 %}
 Hold Condor Jobs <i class="ui pause icon grey"></i>&nbsp;<br>
 Release Condor Jobs  <i class="ui play icon grey"></i>&nbsp;<br>
 Kill Condor Jobs   <i class="ui trash icon grey"></i>&nbsp;<br>
 Kick to Located 
-<a href="{{pomspath}}/force_locate_submission?submission_id={{submission.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
+<a href="{{pomspath}}/force_locate_submission/{{experiment}}/{{role}}?submission_id={{submission.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
 {%else%}
 Hold Condor Jobs <i class="ui pause icon grey"></i>&nbsp;<br>
 Release Condor Jobs  <i class="ui play icon grey"></i>&nbsp;<br>
@@ -129,12 +129,12 @@ Kick to Located  <i class="ui forward icon  grey"></i>&nbsp;
 <br>
 
 {%if history[-1].status_id >= 7000 or history[-1].status_id == 2000 %}
-Re-Launch Submission on dataset {{dataset}} <a href="{{pomspath}}/launch_jobs?campaign_stage_id={{submission.campaign_stage_id}}&dataset_override={{dataset}}"><button>Relaunch</button></a> <br>
+Re-Launch Submission on dataset {{dataset}} <a href="{{pomspath}}/launch_jobs/{{experiment}}/{{role}}?campaign_stage_id={{submission.campaign_stage_id}}&dataset_override={{dataset}}"><button>Relaunch</button></a> <br>
 {%endif%}
 
 {%if history[-1].status_id >= 7000 %}
 Launch Recovery for Submission 
-<form style="display: inline-block;" action="{{pomspath}}/launch_recovery_for">
+<form style="display: inline-block;" action="{{pomspath}}/launch_recovery_for/{{experiment}}/{{role}}">
 <select name="recovery_type">
 {% for r in recoverymap %}
 <option value="{{recoverymap[r][0]}}" >{{r}} </option>
